Bug 1024028 - Part 2: Add an ice_checking callback that is fired when checking actually starts. r=drno