media/mtransport/third_party/nICEr/src/ice/ice_peer_ctx.h
@@ -60,6 +60,7 @@ struct nr_ice_peer_ctx_ {
   nr_ice_media_stream_head peer_streams;
   int active_streams;
   int waiting_pairs;
+  UCHAR checks_started;
 
   void *done_cb_timer;
   UCHAR reported_done;
@@ -80,6 +81,7 @@ int nr_ice_peer_ctx_pair_candidates(nr_ice_peer_ctx *pctx);
 int nr_ice_peer_ctx_parse_global_attributes(nr_ice_peer_ctx *pctx, char **attrs, int attr_ct);
 int nr_ice_peer_ctx_start_checks(nr_ice_peer_ctx *pctx);
 int nr_ice_peer_ctx_start_checks2(nr_ice_peer_ctx *pctx, int allow_non_first);
+void nr_ice_peer_ctx_stream_started_checks(nr_ice_peer_ctx *pctx, nr_ice_media_stream *stream);
 int nr_ice_peer_ctx_dump_state(nr_ice_peer_ctx *pctx,FILE *out);
 int nr_ice_peer_ctx_log_state(nr_ice_peer_ctx *pctx);
 int nr_ice_peer_ctx_stream_done(nr_ice_peer_ctx *pctx, nr_ice_media_stream *stream);
